--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ dist-ssr
 # Generated Data (Large Files)
 public/data/chiangmai-main-roads-lanes.geojson
 public/data/chiangmai-main-roads.geojson
+
+.vercel
+.env*.local
+
+# Sentry Config File
+.env.sentry-build-plugin
