--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
     "build:roads:cm:lanes": "node scripts/road-lanes.mjs"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.1.2",
+    "@sentry/vite-plugin": "^4.7.0",
+    "@sentry/vue": "^10.36.0",
     "@turf/helpers": "^7.3.2",
     "@turf/line-offset": "^7.3.2",
     "@vercel/speed-insights": "^1.3.1",
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/motion": "^3.0.3",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
-    "leaflet": "^1.9.4",
-    "leaflet.markercluster": "^1.5.3",
     "lucide-vue-next": "^0.562.0",
+    "mapbox-gl": "^3.18.0",
     "papaparse": "^5.5.3",
+    "pinia": "^3.0.4",
     "vue": "^3.5.24",
-    "vue-leaflet-markercluster": "^0.6.1"
+    "vue-i18n": "^9.14.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.19",
     "vite": "^7.2.4"
   }
