--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "rsbuild dev",
+    "build": "rsbuild build",
+    "preview": "rsbuild preview",
+    "check": "biome check --write src",
+    "format": "biome format --write src",
+    "lint": "biome lint --write src",
     "build:roads:cm": "node scripts/build-chiangmai-roads.mjs",
     "build:roads:cm:lanes": "node scripts/road-lanes.mjs"
   },
@@ -14,6 +17,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "@sentry/vite-plugin": "^4.7.0",
     "@sentry/vue": "^10.36.0",
+    "@tanstack/vue-query": "^5.92.8",
     "@turf/helpers": "^7.3.2",
     "@turf/line-offset": "^7.3.2",
     "@vercel/speed-insights": "^1.3.1",
@@ -25,9 +29,14 @@
     "papaparse": "^5.5.3",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
-    "vue-i18n": "^9.14.5"
+    "vue-i18n": "^9.14.5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
+    "@playwright/test": "^1.57.0",
+    "@rsbuild/core": "^1.7.2",
+    "@rsbuild/plugin-vue": "^1.2.3",
     "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
