--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,21 +1,58 @@
+# =========================
+# 🔑 PROJECT IDENTIFICATION
+# =========================
 sonar.organization=bravforcode
 sonar.projectKey=bravforcode_vibescity-live
-
-# ชื่อโปรเจกต์โชว์บน SonarCloud
 sonar.projectName=vibescity-live
 
-# โค้ดหลัก
-sonar.sources=src
 sonar.sourceEncoding=UTF-8
 
-# ไม่ต้องนับพวกนี้เป็นโค้ดหลัก
-sonar.exclusions=**/node_modules/**,**/dist/**,**/public/**,**/coverage/**,**/tests/**
+# =========================
+# 📦 SOURCE CODE
+# =========================
+sonar.sources=src
 
-# เทส (ไว้แยกเป็น test files)
+# =========================
+# 🧪 TESTS (UNIT + E2E)
+# =========================
 sonar.tests=tests
 sonar.test.inclusions=tests/**/*
 
-# ✅ Vitest LCOV (ตัวหลัก)
+# =========================
+# 🚫 EXCLUSIONS (NOISE)
+# =========================
+sonar.exclusions=\
+**/node_modules/**,\
+**/dist/**,\
+**/public/**,\
+**/coverage/**,\
+**/playwright-report/**,\
+**/test-results/**,\
+**/*.stories.*,\
+**/*.d.ts
+
+# =========================
+# 📊 UNIT TEST COVERAGE (VITEST)
+# =========================
+# JS / Vue
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-# เผื่อ TS ด้วย (บางโปรเจกต์ใช้ key นี้)
+# เผื่อบางไฟล์เป็น TS
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
+
+# =========================
+# 🎭 E2E TEST EXECUTION (PLAYWRIGHT)
+# =========================
+# ใช้ JUnit XML → แสดง trend (ไม่ปน coverage)
+sonar.testExecutionReportPaths=reports/e2e/junit.xml
+
+# =========================
+# 🔍 QUALITY MODEL (MVP-FRIENDLY)
+# =========================
+# เน้น New Code เป็นหลัก (ไม่ฆ่า legacy)
+sonar.newCode.referenceBranch=main
+
+# =========================
+# 🔐 SECURITY / RELIABILITY
+# =========================
+# อย่าให้ false-positive จาก vendor
+sonar.security.hotspots.inheritFromParent=true
