--- a/package.json
+++ b/package.json
@@ -19,10 +19,26 @@
     "test:unit": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "test:e2e:smoke": "PW_GREP=@smoke playwright test",
+    "test:e2e:smoke": "cross-env PW_GREP=@smoke playwright test",
+    "test:e2e:smoke-map-lite": "cross-env PW_LOW_MEM=1 PW_GREP=@smoke-map-lite PW_NO_WEBSERVER=1 E2E_MAP_REQUIRED=1 playwright test --project=\"Desktop Chromium\"",
+    "test:e2e:map-preflight": "cross-env PW_LOW_MEM=1 PW_GREP=@map-preflight E2E_MAP_REQUIRED=1 playwright test --project=\"Desktop Chromium\"",
+    "test:e2e:map-required": "cross-env PW_LOW_MEM=1 PW_GREP=@map-required PW_GREP_INVERT=@map-quarantine E2E_MAP_REQUIRED=1 playwright test --project=\"Desktop Chromium\"",
+    "test:e2e:map-quarantine": "cross-env PW_LOW_MEM=1 PW_GREP=@map-quarantine playwright test --project=\"Desktop Chromium\"",
     "test:e2e:debug": "PW_SLOWMO=150 playwright test --debug",
+    "healthcheck": "node scripts/healthcheck-manual-order.mjs",
+    "healthcheck:postdeploy": "node scripts/healthcheck-post-deploy.mjs",
+    "test:load": "node scripts/k6/report.mjs --prepare && k6 run k6-tests/realistic-load.js && node scripts/k6/report.mjs --build",
     "test:spike": "k6 run k6-tests/spike-test.js",
-    "test:chaos": "k6 run k6-tests/chaos-test.js"
+    "test:chaos": "k6 run k6-tests/chaos-test.js",
+    "ci:weekly-trend": "node scripts/ci/weekly-quality-trend.mjs",
+    "ci:monthly-trend": "cross-env TREND_DAYS=30 TREND_TITLE=\"Monthly Quality Trend Summary\" TREND_OUTPUT_PATH=reports/ci/monthly-quality-trend.json node scripts/ci/weekly-quality-trend.mjs",
+    "ci:route-slo": "node scripts/ci/evaluate-route-slo.mjs",
+    "ci:publish-metrics": "node scripts/ci/publish-observability-metrics.mjs",
+    "ci:manage-incidents": "node scripts/ci/manage-incidents.mjs",
+    "knip": "knip -c knip.json --no-progress",
+    "knip:deps": "knip -c knip.json --include dependencies,unlisted,binaries,unresolved --no-progress",
+    "knip:files": "knip -c knip.json --include files --no-progress",
+    "knip:exports": "knip -c knip.json --include exports,types,duplicates --no-progress"
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.1.2",
@@ -38,16 +54,22 @@
     "@vueuse/motion": "^3.0.3",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "csv-parser": "^3.2.0",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
+    "lottie-web": "^5.13.0",
     "lucide-vue-next": "^0.562.0",
     "mapbox-gl": "^3.18.0",
     "papaparse": "^5.5.3",
     "pinia": "^3.0.4",
+    "promptpay-qr": "^0.5.0",
+    "qrcode.vue": "^3.8.0",
+    "uuid": "^13.0.0",
     "vue": "^3.5.24",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.4",
+    "vue3-lottie": "^3.3.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -62,11 +84,13 @@
     "@unhead/vue": "^2.1.2",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.18",
+    "@vue/compiler-sfc": "^3.5.27",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.23",
     "cross-env": "^10.1.0",
     "happy-dom": "^20.3.7",
     "jsdom": "^27.4.0",
+    "knip": "^5.83.0",
     "pinia-plugin-persistedstate": "^4.7.1",
     "postcss": "^8.5.6",
     "rollup-plugin-visualizer": "^6.0.5",
@@ -74,6 +98,7 @@
     "storybook-vue3-rsbuild": "^3.2.2",
     "tailwindcss": "^3.4.19",
     "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.18",
     "workbox-build": "^7.4.0",
     "workbox-window": "^7.4.0",
