--- a/.github/workflows/monthly-quality-trend.yml
+++ b/.github/workflows/monthly-quality-trend.yml
@@ -125,3 +125,18 @@ jobs:
           path: reports/ci/incident-manager-log.json
           retention-days: 60
           if-no-files-found: ignore
+
+      - name: Save Step Summary
+        if: ${{ always() && !cancelled() }}
+        run: |
+          mkdir -p reports/ci
+          cp "$GITHUB_STEP_SUMMARY" reports/ci/step-summary-monthly-quality-trend.md || true
+
+      - name: Upload Step Summary
+        if: ${{ always() && !cancelled() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: step-summary-monthly-quality-trend
+          path: reports/ci/step-summary-monthly-quality-trend.md
+          retention-days: 60
+          if-no-files-found: ignore
