--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,12 +13,24 @@ dependencies = [
     "websockets>=12.0",
     "supabase>=2.3.0",
     "httpx>=0.26.0",
-    "python-multipart>=0.0.7"
+    "python-multipart>=0.0.7",
+    "redis>=5.0.0",
+    "python-dotenv>=1.0.1",
+    "google-auth>=2.29.0",
+    "requests>=2.31.0",
+    "h3>=4.4.0",
+    "prometheus-client>=0.20.0",
+    "opentelemetry-api>=1.26.0",
+    "opentelemetry-sdk>=1.26.0",
+    "opentelemetry-exporter-otlp>=1.26.0",
+    "opentelemetry-instrumentation-fastapi>=0.47b0",
+    "opentelemetry-instrumentation-httpx>=0.47b0"
 ]
 
 [tool.uv]
 dev-dependencies = [
     "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
     "ruff>=0.2.0",
     "httpx>=0.26.0"
 ]
