feat(memory): add mem0 + pgvector memory service (Phase 1)
- Add mem0ai to backend/requirements.txt
- Add MEMORY_ENABLED, OPENAI_API_KEY, MEMORY_DATABASE_URL to config.py
- Create memory_service.py singleton (feature-flagged, graceful fallback)
- Create manage_memory.py CLI (ingest/search)
- Add docs/enable_pgvector.sql for one-time Supabase setup

All changes are additive and no-op when MEMORY_ENABLED=false (default).

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,3 +20,4 @@ opentelemetry-sdk>=1.26.0
 opentelemetry-exporter-otlp>=1.26.0
 opentelemetry-instrumentation-fastapi>=0.47b0
 opentelemetry-instrumentation-httpx>=0.47b0
+mem0ai
