chore(backend): add ruff lint config + pytest-cov (Phase 2)
- Add pytest-cov>=5.0.0 to requirements-dev.txt
- Add [tool.ruff] with line-length=100, py312 target, selected rules
- Add [tool.ruff.lint] select E/F/I/B/UP, ignore E501
- Add [tool.pytest.ini_options] addopts with --cov=app
- Existing codebase has 170 lint findings (baseline, not fixed here)

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,3 +38,17 @@ dev-dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.ruff]
+line-length = 100
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E","F","I","B","UP"]
+ignore = ["E501"]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.pytest.ini_options]
+addopts = "--cov=app --cov-report=term-missing"
