--- a/.github/workflows/osm-sync.yml
+++ b/.github/workflows/osm-sync.yml
@@ -2,13 +2,21 @@ name: VibeCity OSM Sync
 
 on:
   schedule:
-    # Run every 30 minutes
-    - cron: '*/30 * * * *'
+    # Run every 10 minutes
+    - cron: '*/10 * * * *'
   workflow_dispatch: # Allow manual trigger
+
+permissions:
+  contents: read
+
+concurrency:
+  group: osm-sync-prod
+  cancel-in-progress: true
 
 jobs:
   sync:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install redis h3>=4.0.0 supabase requests python-dotenv fakeredis
+          pip install redis "h3>=4.0.0" supabase requests python-dotenv fakeredis asyncpg
 
       - name: Run OSM Sync (Short Batch)
         env:
@@ -32,4 +40,45 @@ jobs:
           TILE_Z: 9
         # Run loop=5 to do a batch of work and then stop (freeing up the runner)
         # The script is incremental, so next run picks up where it left off.
-        run: python backend/scripts/osm_sync_ultimate.py --loop=5
+        run: |
+          set -euo pipefail
+          python backend/scripts/osm_sync_ultimate.py --loop=5 | tee osm_sync.log
+
+      - name: Contract Validation
+        env:
+          SUPABASE_DIRECT_URL: ${{ secrets.SUPABASE_DIRECT_URL }}
+        run: |
+          set -euo pipefail
+          python scripts/ci/validate_osm_contract.py | tee osm_contract_validation.log
+
+      - name: Append workflow summary
+        if: always()
+        run: |
+          {
+            echo "## OSM Sync"
+            echo ""
+
+            echo "### Sync Summary"
+            if [ -f osm_sync.log ]; then
+              SYNC_LINE="$(grep -E 'OSM_SYNC_SUMMARY=' osm_sync.log | tail -n 1 || true)"
+              if [ -n "${SYNC_LINE}" ]; then
+                echo '```json'
+                echo "${SYNC_LINE#*OSM_SYNC_SUMMARY=}"
+                echo '```'
+              else
+                echo "- No OSM_SYNC_SUMMARY line found."
+              fi
+            else
+              echo "- Sync log not found."
+            fi
+
+            echo ""
+            echo "### Contract Validation"
+            if [ -f osm_contract_validation.log ]; then
+              echo '```'
+              tail -n 60 osm_contract_validation.log
+              echo '```'
+            else
+              echo "- Validation log not found."
+            fi
+          } >> "$GITHUB_STEP_SUMMARY"
