--- a/.github/workflows/osm-sync.yml
+++ b/.github/workflows/osm-sync.yml
@@ -44,6 +44,7 @@ jobs:
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
           PROD_ADMIN_EMAIL: ${{ secrets.PROD_ADMIN_EMAIL }}
           PROD_ADMIN_PASSWORD: ${{ secrets.PROD_ADMIN_PASSWORD }}
+          PROD_ADMIN_BEARER_TOKEN: ${{ secrets.PROD_ADMIN_BEARER_TOKEN }}
           VIBECITY_API_BASE_URL: https://vibecity-api.fly.dev
           MIN_EXPECTED_VENUES: 1000
         run: python scripts/ci/verify_osm_dashboard_stats.py
