ci: stabilize github actions without package-lock dependency

--- a/.github/workflows/analytics-warehouse-export.yml
+++ b/.github/workflows/analytics-warehouse-export.yml
@@ -51,7 +51,7 @@ jobs:
             ${{ runner.os }}-bun-
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: bun install --frozen-lockfile || bun install
 
       - name: Provision BigQuery analytics table (partitioning + retention)
         continue-on-error: true
