--- a/.github/workflows/pii-access-anomaly-alert.yml
+++ b/.github/workflows/pii-access-anomaly-alert.yml
@@ -39,7 +39,7 @@ jobs:
             ${{ runner.os }}-bun-
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: bun install --frozen-lockfile || bun install
 
       - name: Check PII access anomalies
         id: check
