--- a/.github/workflows/seo-data-quality-alert.yml
+++ b/.github/workflows/seo-data-quality-alert.yml
@@ -39,7 +39,7 @@ jobs:
             ${{ runner.os }}-bun-
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: bun install --frozen-lockfile || bun install
 
       - name: Run SEO data quality check
         id: quality
