--- a/.github/workflows/visual-regression.yml
+++ b/.github/workflows/visual-regression.yml
@@ -41,23 +41,40 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Detect Google credentials
+        id: gcp_auth
+        run: |
+          if [ -n "${{ secrets.GOOGLE_CREDENTIALS }}" ]; then
+            echo "enabled=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "::warning::GOOGLE_CREDENTIALS is not configured. Skipping GCS-backed visual regression lane."
+            echo "enabled=false" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Install dependencies
         run: bun install --frozen-lockfile || bun install
 
       - name: Install Playwright browser
         run: npx playwright install --with-deps chromium
 
+      - name: Skip visual regression (missing GCS credentials)
+        if: ${{ steps.gcp_auth.outputs.enabled != 'true' }}
+        run: echo "Skipping visual regression: GOOGLE_CREDENTIALS is not available for this run."
+
       - name: Authenticate to Google Cloud
+        if: ${{ steps.gcp_auth.outputs.enabled == 'true' }}
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
 
       - name: Setup gcloud
+        if: ${{ steps.gcp_auth.outputs.enabled == 'true' }}
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.GCP_PROJECT }}
 
       - name: Resolve baseline key
+        if: ${{ steps.gcp_auth.outputs.enabled == 'true' }}
         shell: bash
         run: |
           BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}"
@@ -68,12 +85,14 @@ jobs:
           echo "VISUAL_BASELINE_KEY=$SAFE_BRANCH" >> "$GITHUB_ENV"
 
       - name: Download baseline snapshots from GCS
+        if: ${{ steps.gcp_auth.outputs.enabled == 'true' }}
         shell: bash
         run: |
           mkdir -p tests/visual/critical.spec.ts-snapshots
           gsutil -m cp -r "gs://${GCS_BUCKET}/baseline/${VISUAL_BASELINE_KEY}/*" "tests/visual/critical.spec.ts-snapshots/" || true
 
       - name: Run visual regression
+        if: ${{ steps.gcp_auth.outputs.enabled == 'true' }}
         shell: bash
         run: |
           UPDATE="${{ github.event.inputs.update_baseline || 'false' }}"
@@ -84,7 +103,7 @@ jobs:
           fi
 
       - name: Upload run artifacts to GCS
-        if: always()
+        if: ${{ always() && steps.gcp_auth.outputs.enabled == 'true' }}
         shell: bash
         run: |
           gsutil -m cp -r playwright-report "gs://${GCS_BUCKET}/runs/${GITHUB_SHA}/playwright-report" || true
@@ -92,7 +111,7 @@ jobs:
           gsutil -m cp -r tests/visual/critical.spec.ts-snapshots "gs://${GCS_BUCKET}/runs/${GITHUB_SHA}/snapshots" || true
 
       - name: Publish baseline to GCS (main + manual only)
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.update_baseline == 'true' && (github.ref_name == 'main' || github.ref_name == 'master')
+        if: steps.gcp_auth.outputs.enabled == 'true' && github.event_name == 'workflow_dispatch' && github.event.inputs.update_baseline == 'true' && (github.ref_name == 'main' || github.ref_name == 'master')
         shell: bash
         run: |
           gsutil -m rsync -r -d tests/visual/critical.spec.ts-snapshots "gs://${GCS_BUCKET}/baseline/main"
