--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,4 +20,4 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run E2E
-        run: npx playwright test
+        run: npm run test:e2e:smoke
