ci: align sonarcloud auto-analysis scope with PR gate

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -3,7 +3,7 @@ sonar.projectKey=bravforcode_vibescity-live
 sonar.projectName=vibescity-live
 sonar.sourceEncoding=UTF-8
 
-# Keep the PR gate focused on actively maintained critical paths.
+# Automatic analysis scope (SonarCloud app check on PRs)
 sonar.sources=src/router/index.js,src/store/userStore.js
 sonar.tests=tests/e2e/smoke.spec.ts
 sonar.test.inclusions=tests/e2e/smoke.spec.ts
@@ -18,7 +18,4 @@ sonar.exclusions=\
 **/*.stories.*,\
 **/*.d.ts
 
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.testExecutionReportPaths=reports/e2e/sonar-generic.xml
 sonar.newCode.referenceBranch=main
