--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@tanstack/vue-query": "^5.92.8",
     "@turf/helpers": "^7.3.2",
     "@turf/line-offset": "^7.3.2",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "@vueuse/core": "^14.2.0",
     "@vueuse/motion": "^3.0.3",
