chore: baseline snapshot before home map/search/review debug

--- a/package.json
+++ b/package.json
@@ -75,7 +75,9 @@
     "chart.js": "^4.5.1",
     "csv-parser": "^3.2.0",
     "dayjs": "^1.11.19",
+    "dompurify": "^3.3.1",
     "dotenv": "^17.3.1",
+    "idb-keyval": "^6.2.2",
     "lottie-web": "^5.13.0",
     "lucide-vue-next": "^0.562.0",
     "mapbox-gl": "^3.18.0",
@@ -100,6 +102,7 @@
     "@storybook/addon-a11y": "^10.2.0",
     "@storybook/addon-docs": "^10.2.0",
     "@storybook/addon-onboarding": "^10.2.0",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/node": "^25.0.10",
     "@unhead/vue": "^2.1.2",
     "@vitejs/plugin-vue": "^6.0.3",
