--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
         "target": "esnext",
         "useDefineForClassFields": true,
         "module": "esnext",
-        "moduleResolution": "bundler",
+        "moduleResolution": "node",
         "strict": false,
         "jsx": "preserve",
         "sourceMap": true,
         "resolveJsonModule": true,
         "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
         "skipLibCheck": true,
         "allowJs": true,
         "checkJs": false,
@@ -16,6 +17,7 @@
             "esnext",
             "dom"
         ],
+        "baseUrl": ".",
         "paths": {
             "@/*": [
                 "./src/*"
